sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Final_Commission__c.field-meta.xml
<CustomField>
    <fullName>Final_Commission__c</fullName>
    <description>LEM-441: This is the agreed-upon commission rate for the quote to be used for integration, activation, and billing.</description>
    <formula>IF(
    SBQQ__Quote__r.Segment__c = $Label.AccountSegmentSMB,
    IF(
        NOT(ISBLANK(Requested_Commission__c)),
        Requested_Commission__c,
        Original_Commission__c
      ),
    IF(
        NOT(ISNULL(Active_Commission__c)),
        Active_Commission__c,
        IF(
          NOT(ISNULL(Requested_Commission__c)),
          Requested_Commission__c,
          IF(
            NOT(ISNULL(Original_Commission__c)),
            Original_Commission__c,
            0
            )
          )
      )
    )
    </formula>
    <label>Final Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>