sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Final_Fee__c.field-meta.xml
<CustomField>
    <fullName>Final_Fee__c</fullName>
    <description>LEM-441: This is the agreed-upon fee for the quote to be used for integration, activation, and billing.LEM-6457: Active fee check</description>
    <formula>IF(
  SBQQ__Quote__r.Segment__c = $Label.AccountSegmentSMB,
  IF(
    NOT(
      ISBLANK(SBQQ__SpecialPrice__c)
    ),
    SBQQ__SpecialPrice__c,
    IF(
      SBQQ__ListPrice__c != 0,
      SBQQ__ListPrice__c,
      null
      )
    )  ,
    IF(
      NOT(
        ISNULL( Active_Fee__c )
      ),
      Active_Fee__c,
      IF(
        NOT(
          ISNULL(SBQQ__SpecialPrice__c)
        ),
      SBQQ__SpecialPrice__c,
      0
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Final Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>