sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Flat_Discount_Amount_for_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Flat_Discount_Amount_for_Consumer__c</fullName>
    <description>LEM-1602: Create New Fields for Ads and Promos</description>
    <inlineHelpText>This is the flat fee the consumer is charged.</inlineHelpText>
    <label>Flat Discount Amount for Consumer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>