sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <description>LEM-16543: Magic wand attribute.</description>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merchant Funded</fullName>
            </value>
            <value>
                <fullName>Doordash Funded</fullName>
            </value>
            <value>
                <fullName>Co-Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>