sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <description>LEM-13960: Magic Wand Attributes</description>
    <label>Funding Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>