sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Has_Brief_Item__c.field-meta.xml
<CustomField>
    <fullName>Has_Brief_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3957: It is used to indicate if the Quote Line Item has a Brief Item associated.</description>
    <label>Has Brief Item</label>
    <type>Checkbox</type>
</CustomField>