sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Incremental_Fee_Per_Mile_Driven__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Fee_Per_Mile_Driven__c</fullName>
    <description>LEM-467: Specify additional attributes related to Drive products</description>
    <label>Incremental Fee Per Mile Driven</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>