sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Current_Date_Greater_Than_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Date_Greater_Than_Start_Date__c</fullName>
    <description>LEM-13626: It is used to check if the current date is greater than start date of Quote Line.</description>
    <formula>Today() &gt; SBQQ__StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Date Greater Than Start Date</label>
    <type>Checkbox</type>
</CustomField>