sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_DashPass_Child_Of_BasicPacakge__c.field-meta.xml
<CustomField>
    <fullName>Is_DashPass_Child_Of_BasicPacakge__c</fullName>
    <description>LEM-13986: It shows marketplace dashpass under basic package is added.</description>
    <formula>IF(
  SBQQ__ProductName__c = $Label.MarketplaceDashpass &amp;&amp; Package__c = $Label.BasicPackage,
  true,  
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is DashPass Child Of BasicPacakge</label>
    <type>Checkbox</type>
</CustomField>