sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16959: Determines if the line item is editable or not</description>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>