sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_End_Date_Less_Than_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_End_Date_Less_Than_Start_Date__c</fullName>
    <description>LEM-13824: It is used to show if 'End Date' is less than 'Start Date'.</description>
    <formula>End_Date__c &lt; Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Is End Date Less Than Start Date</label>
    <type>Checkbox</type>
</CustomField>