sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_It_A_New_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_It_A_New_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-19081: It is used to identify whether a quote line is added as net new in the corresponding quote. It also checks that a quote line is not cloned from the original line during an amendment scenario.</description>
    <label>OI Product Addition Input</label>
    <type>Checkbox</type>
</CustomField>