sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Max_Discount_Greater_than_Min_Disc__c.field-meta.xml
<CustomField>
    <fullName>Is_Max_Discount_Greater_than_Min_Disc__c</fullName>
    <description>LEM-13964: It indicates whether the difference between Max Discount and Min Discount is greater than or equal to 1.</description>
    <formula>IF(
  (Max_Discount_Amount_for_Consumer__c - (Discount_Percentage_for_Consumer__c * Order_Cart_Minimum__c)) &gt;= 1,
  True,
  False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Max Discount Greater than Min Disc</label>
    <type>Checkbox</type>
</CustomField>