sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Original_Line_Cloned__c.field-meta.xml
<CustomField>
    <fullName>Is_Original_Line_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-15247: It is used to check if the original line is cloned.</description>
    <label>Is Original Line Cloned?</label>
    <type>Checkbox</type>
</CustomField>