sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_this_part_of_any_DoorDash_Occasions__c.field-meta.xml
<CustomField>
    <fullName>Is_this_part_of_any_DoorDash_Occasions__c</fullName>
    <description>LEM-13256 - DPEI Quote Line Attributes</description>
    <label>Is this part of any DoorDash Occasions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occasion</valueSetName>
    </valueSet>
</CustomField>