sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Description_Details__c.field-meta.xml
<CustomField>
    <fullName>Item_Description_Details__c</fullName>
    <description>LEM-13256 - DPEI Quote Line Attributes</description>
    <inlineHelpText>If you have additional information about the item itself such as any description, rationale behind launch or key words, please include them here. We will ask for marketing-specific information in the next section</inlineHelpText>
    <label>Item Description/Details</label>
    <type>TextArea</type>
</CustomField>