sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/List_Price_Less_or_Equal_Deal_Desk_Fee__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Less_or_Equal_Deal_Desk_Fee__c</fullName>
    <formula>IF(
    AND(
        SBQQ__Existing__c = false,
        AND(
            (SBQQ__ListPrice__c &lt;= Deal_Desk_Fee_Threshold__c) &amp;&amp; 
            Deal_Desk_Fee_Threshold__c&gt;=0.01 &amp;&amp; SBQQ__ListPrice__c&gt;=0.01
        )
    ),
    1,2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Less or Equal Deal Desk Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>