sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Magic_Wand_Defaulted__c.field-meta.xml
<CustomField>
    <fullName>Magic_Wand_Defaulted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16861: Create New Field for Sponsored Listings Defaulting</description>
    <label>Magic Wand Defaulted</label>
    <type>Checkbox</type>
</CustomField>