sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Marketing_Commitment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Commitment_End_Date__c</fullName>
    <description>LEM-2108: New fields to capture Marketing Commitment</description>
    <label>Marketing Commitment End Date</label>
    <type>Date</type>
</CustomField>