sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Marketing_Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Flat_Fee__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products
LEM-9346: Fixing the Process for In-Campaign Changes - default to $0 to mirror BI formula
LEM-12451: Update ‘Incremental Marketing Fee per Redemption’ logic to Not Default to $0 in LWC</description>
    <label>Incremental Marketing Fee Per Redemption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>