sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Marketing_Only_Commission__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Only_Commission__c</fullName>
    <description>LEM-13626: It captures the value of additional marketing fee rate. LEM-13960 - Magic Wand Attributes</description>
    <label>Additional Marketing Fee Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>