sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Max_Average_Blended_Inflation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Max_Average_Blended_Inflation_Rate__c</fullName>
    <description>BASD-54374: LHA: Enhancement request for 2 additional fields on the parent quote / opp level</description>
    <label>Max Average Blended Inflation Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>