sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Max_Delivery_Distance__c.field-meta.xml
<CustomField>
    <fullName>Max_Delivery_Distance__c</fullName>
    <description>LEM-13626: To ensures that for the &quot;Flexible Fulfillment Fee&quot; product, deliveries must meet a maximum distance requirement, expressed in meters.</description>
    <label>Max Delivery Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>