sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Max_Fee_Order_Distance__c.field-meta.xml
<CustomField>
    <fullName>Max_Fee_Order_Distance__c</fullName>
    <description>LEM-2064: Drive Product Attributes</description>
    <label>Max Fee/ Order</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>