sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Max_Number_of_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Redemptions__c</fullName>
    <description>LEM-468 – Attributes related to Promotion products
LEM-12181 - Update Max Number of Redemptions to ‘Overall Max Number of Redemptions’</description>
    <label>Overall Max Number of Redemptions</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>