sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Maximum_Promo_Fee__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Promo_Fee__c</fullName>
    <description>LEM-13960: Magic Wand Attributes</description>
    <label>Promo Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>