sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Merchant_Deck_Rank__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Deck_Rank__c</fullName>
    <description>LEM-13812 : This field returns the Deck related to the Account with the Quote</description>
    <formula>SBQQ__Quote__r.Deck_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Merchant Deck Rank</label>
    <type>Text</type>
</CustomField>