sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Min__c.field-meta.xml
<CustomField>
    <fullName>Min__c</fullName>
    <description>LEM-467: Specify additional attributes related to Drive products</description>
    <label>Min Delivery Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>