sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Min_Delivery_Distance__c.field-meta.xml
<CustomField>
    <fullName>Min_Delivery_Distance__c</fullName>
    <description>LEM-13626: It states Flexible Fulfillment Fee product requires deliveries to meet a specific minimum distance, measured in meters.</description>
    <label>Min Delivery Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>