sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Minimum_Order_Size__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Size__c</fullName>
    <description>LEM-2064: Drive Product Attributes</description>
    <label>Minimum Order Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>