sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Mx_gives_RightOfRefusal_on_future_LTOs__c.field-meta.xml
<CustomField>
    <fullName>Mx_gives_RightOfRefusal_on_future_LTOs__c</fullName>
    <description>LEM-13256 - DPEI Quote Line Attributes</description>
    <label>Mx gives RightOfRefusal on future LTOs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Maybe</valueSetName>
    </valueSet>
</CustomField>