sfdx-source/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Non_BD_Pipeline_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Non_BD_Pipeline_Product_Count__c</fullName>
    <complianceGroup>PCI</complianceGroup>
    <description>Created as part of LEM-10077 to store the count of New non BD Pipeline Product on Amendment quote</description>
    <formula>IF(SBQQ__ProductCode__c &lt;&gt; &apos;10082&apos; &amp;&amp;
SBQQ__Quantity__c = 1 &amp;&amp;
SBQQ__Existing__c = false, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Holds the count of New non BD Pipeline Product on Amendment quote</inlineHelpText>
    <label>Non BD Pipeline Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>